@@ -62,6 +62,8 @@ bzr development version
 
     * Add parent location to 'bzr info', if there is one.  (Olaf Conradi)
 
+    * New developer commands 'weave-list' and 'weave-join'.  (Martin Pool)
+
   CHANGES:
 
     * Commit is now verbose by default, and shows changed filenames and the 
